--- a/Lesson1.ipynb
+++ b/Lesson1.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Developing a classifier:\n",
     "========================\n",
     "* Review of image as array\n",
-    "* Filtering data via Boolean masking\n",
     "* Computing statistics on selected regions\n",
+    "* Filtering data via Boolean masking\n",
     "* Using statistics to build an NDVI classifier\n",
     "* Creating classifiers for water, building, clouds\n",
     "\n"
@@ -18,14 +22,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
     "#read in data\n",
     "import landsat as lf\n",
-    "rgbfile = \"data/landsat_RGBN.txt\" \n",
-    "rgbn = lf.landsat_read(rgbfile)"
+    "rgbpath = \"data/landsat_RGBN.txt\" \n",
+    "rgbn = lf.landsat_read(rgbpath)"
    ]
   },
   {
@@ -33,7 +40,10 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -44,7 +54,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "How do we unpack data?\n",
     "============================================\n",
@@ -55,7 +69,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -71,7 +88,10 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -93,33 +113,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "How do we compute statistics?\n",
-    "============================"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
-   "outputs": [],
    "source": [
-    "print(red.mean(), green.mean(), blue.mean())"
+    "How do we look at the distribution of the data?\n",
+    "===============================================\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
     "#plot histogram of red channel\n",
-    "%matplotlib inline\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(1,1,1)\n",
     "ax.hist(red.flatten(), color=\"red\")\n",
@@ -132,119 +147,118 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
-    "#ToDo: plot histograms for green and blue channels"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "How do we filter?\n",
-    "=======================================\n",
-    "![boolean mask](figs/masking.png)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#lets build a blue mask\n",
-    "blue_mask = (blue>blue.mean())\n",
-    "print (blue_mask)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.cm as mcm\n",
-    "import matplotlib.colors as mcolors\n",
-    "#what does that mean?\n",
-    "\n",
-    "cmap = mcm.bone\n",
-    "norm = mcolors.BoundaryNorm([0,1,2],cmap.N)\n",
+    "# add in blue channel\n",
+    "%matplotlib inline\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(1,1,1)\n",
-    "im = ax.imshow(blue_mask, cmap=cmap, norm=norm)\n",
-    "cb = fig.colorbar(im, ax=ax)\n",
-    "cb.set_ticks([0.5,1.5])\n",
-    "cb.set_ticklabels([\"not in mask\",\"in mask\"])\n",
-    "fig.canvas.draw()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#plot only the data shown in the map\n",
-    "rgb_copy = rgb_array.copy()\n",
-    "#zero out values not in mask\n",
-    "\n",
-    "rgb_copy[~blue_mask] = np.nan\n",
-    "cmap = mcm.bone\n",
-    "norm = mcolors.BoundaryNorm([0,1,2],cmap.N)\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(1,1,1)\n",
-    "im = ax.imshow(rgb_copy)\n",
+    "ax.hist(red.flatten(), color=\"red\", alpha=0.3)\n",
+    "ax.hist(blue.flatten(), color='blue', alpha=0.3)\n",
+    "ax.set_ylabel(\"# of observations\")\n",
+    "ax.set_xlabel(\"temperature bins\")\n",
     "fig.canvas.draw()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
-   "outputs": [],
    "source": [
-    "#combine masks and show which region is in both\n",
-    "blue_mask = (blue>blue.mean())\n",
-    "red_mask = (red>red.mean())\n",
-    "comb_mask = (blue_mask & red_mask)\n",
-    "\n",
-    "cmap = mcm.bone\n",
-    "norm = mcolors.BoundaryNorm([0,1,2],cmap.N)\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(1,1,1)\n",
-    "im = ax.imshow(comb_mask, cmap=cmap, norm=norm)\n",
-    "cb = fig.colorbar(im, ax=ax)\n",
-    "cb.set_ticks([0.5,1.5])\n",
-    "cb.set_ticklabels([\"not in mask\",\"in mask\"])\n",
-    "fig.canvas.draw()\n",
-    "\n"
+    "ToDo:\n",
+    "====\n",
+    "1. plot histograms for green and blue channels\n",
+    "2. plot histograms for raw (uncontrasted) data\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Histogram => pdf\n",
+    "=========================\n",
+    "\n",
+    "![img](figs/distro.jpg)\n",
+    "src: [NausicaaDistribution](https://www.etsy.com/listing/71739287/collection-of-10-distribution-plushies)\n",
+    "\n",
+    "pdfs (probability distribution functions) are a representation of the chance (probability) of an observation occurring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import scipy.stats as st\n",
+    "import numpy as np\n",
+    "\n",
+    "#estimate the P function of the distribution\n",
+    "kernal = st.gaussian_kde(red.flatten())\n",
+    "# color values range between 0 & 1 \n",
+    "\n",
+    "x = np.linspace(0,1,100) #the range of potential color values\n",
+    "y = kernal(x) #probability of each x happening"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#plot histogram and pdf of red channel\n",
+    "%matplotlib inline\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(1,1,1)\n",
+    "ax.hist(red.flatten(), color=\"red\",normed=True, alpha=0.3, label=\"Hist(r)\")\n",
+    "ax.plot(x, y, color=\"red\", label=\"$P(r)$\")\n",
+    "ax.set_ylabel(\"# of observations\")\n",
+    "ax.set_xlabel(\"temperature bins\")\n",
+    "ax.legend()\n",
+    "fig.canvas.draw()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "ToDo\n",
     "=====\n",
-    "1) Apply combined mask to daya\n",
-    "2) Explore different thresholds for each of the color channels\n",
-    "3) Combine various thresholds\n",
-    "4) See if combination masks can highlight/yield features in the dataset"
+    "1. plot pdfs for green and blue channels\n",
+    "2. plot pfds for raw (uncontrasted) data"
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
