--- a/Lesson4.ipynb
+++ b/Lesson4.ipynb
@@ -1686,6 +1686,7 @@
    "source": [
     "# is this a good classifier? \n",
     "# test the class criteria on a new file:\n",
+    "#http://glasslab.engr.ccny.cuny.edu/u/hannah/eas213/\n",
     "\n",
     "import scipy.ndimage as nd\n",
     "folder = \"data\"\n",
@@ -3326,6 +3327,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "How to classify\n",
+    "===============\n",
+    "1) identify region of interest in training image\n",
+    "2) develop criteria for classification such as\n",
+    "    * red between some thresholds\n",
+    "    * ndvi over some value, etc\n",
+    "3) apply criteria to training image using masks\n",
+    "    * compare class statistics - rgbs, nvi mean, etc \n",
+    "4) apply criteria to test (new) images using masks\n",
+    "    * compare class statistics - rgbs, nvi mean, etc"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -3336,6 +3355,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
