--- a/2017/july21b.ipynb
+++ b/2017/july21b.ipynb
@@ -216,7 +216,7 @@
    "outputs": [],
    "source": [
     "#exchange rates greater than 10 and only national areas\n",
-    "df[df[\"exchrate\"]>10 & df[\"Area\"].str.match(\"Area\")]"
+    "df[df[\"exchrate\"]>10 & df[\"Area\"].str.match(\"Urban\")]"
    ]
   },
   {
@@ -226,7 +226,7 @@
    "outputs": [],
    "source": [
     "#exchange rates greater than 10 and only national areas\n",
-    "df[df[\"exchrate\"]>10 | df[\"Area\"].str.match(\"Area\")]"
+    "df[df[\"exchrate\"]>10 | df[\"Area\"].str.match(\"Urban\")]"
    ]
   },
   {
