--- a/2017/july21a.ipynb
+++ b/2017/july21a.ipynb
@@ -68,7 +68,7 @@
     "%matplotlib inline\n",
     "#.data because of the 'data' key\n",
     "# this takes the average over the lat and lon\n",
-    "ds.data.mean(dim=[\"lat\",\"lon\"]).plot()"
+    "ds['data'].mean(dim=[\"lat\",\"lon\"]).plot()"
    ]
   },
   {
@@ -80,7 +80,7 @@
     "#can also do median\n",
     "import matplotlib.pyplot as plt\n",
     "fig, ax = plt.subplots()\n",
-    "ds.data.std(dim=[\"lat\",\"lon\"]).plot(ax=ax)\n",
+    "ds['data'].std(dim=[\"lat\",\"lon\"]).plot(ax=ax)\n",
     "ax.set_title(\"Standard deviation\")"
    ]
   },
@@ -91,21 +91,19 @@
    "outputs": [],
    "source": [
     "# can do maps too!\n",
-    "ds.data.mean(dim=[\"time\"]).plot()"
+    "ds['data'].mean(dim=[\"time\"]).plot()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#let's use a more logical cmap and learn how to install things\n",
     "import cmocean.cm as ccm\n",
     "fig, ax = plt.subplots(figsize=(10,4))\n",
-    "ds.data.mean(dim=[\"time\"]).plot(cmap=ccm.delta, ax=ax)\n",
+    "ds['data'].mean(dim=[\"time\"]).plot(cmap=ccm.delta, ax=ax)\n",
     "ax.set_aspect('equal')"
    ]
   },
@@ -120,9 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#our time series data\n",
@@ -132,28 +128,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# let's pick a random date\n",
     "fig, ax = plt.subplots(figsize=(10,4))\n",
-    "ds.data.loc['1994-04'].plot(cmap=ccm.delta, ax =ax)\n",
+    "ds['data'].loc['1994-04'].plot(cmap=ccm.delta, ax =ax)\n",
     "ax.set_aspect('equal')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# more control?\n",
     "#values converts ds to an array, #squeeze removes dimensions\n",
-    "ndvi = ds.data.loc['1994-04'].values.squeeze()\n",
+    "ndvi = ds['data'].loc['1994-04'].values.squeeze()\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10,5))\n",
     "#center at 0\n",
@@ -165,9 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Let's get ndvi data near new york city: 40.7128° N, -74.0059° W\n",
@@ -179,20 +169,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "ts = ds.data.sel(lat=40.7128, lon=285.9941, method='nearest', tolerance=5)"
+    "ts = ds['data'].sel(lat=40.7128, lon=285.9941, method='nearest', tolerance=5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -226,9 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "clim"
@@ -237,20 +221,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "clim.data.mean(['lat','lon']).plot()"
+    "clim['data'].mean(['lat','lon']).plot()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(10,4))\n",
@@ -275,6 +255,15 @@
    "source": [
     "# more information: https://gist.github.com/shoyer/d462cc3b2aeb87bbb78cc6f8207851c6"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
