updating against local

--- a/pizza/pizza.ipynb
+++ b/pizza/pizza.ipynb
@@ -8,7 +8,9 @@
     }
    },
    "source": [
-    "# "
+    "# http://bit.ly/pizzapy\n",
+    "# User: TCGuest00\n",
+    "# Pass: ccny2017"
    ]
   },
   {
@@ -24,13 +26,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How many RSVPs? 21\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'21'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# How many people? use the input function!\n",
     "input(\"How many RSVPs? \") "
@@ -38,13 +58,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 21\n",
+    "print(x)\n",
+    "x = \"Hello\"\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How many RSVPs? 21\n"
+     ]
+    }
+   ],
    "source": [
     "#How do we store? Variables!\n",
     "people = input(\"How many RSVPs? \")"
@@ -52,21 +105,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "must be str, not int",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-86d04aa2123e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# How do we see what's stored?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpeople\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mpeople\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: must be str, not int"
+     ]
+    }
+   ],
    "source": [
     "# How do we see what's stored?\n",
-    "print(people)"
+    "print(people)\n",
+    "people + 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -80,17 +153,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How many RSVPs? a lot\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'a lot'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-19b062625b01>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Does this always work?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mpeople\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"How many RSVPs? \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mpeople\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpeople\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'a lot'"
+     ]
+    }
+   ],
    "source": [
     "# Does this always work?\n",
     "people = input(\"How many RSVPs? \")\n",
-    "people = int(people)\n"
+    "people = int(people)"
    ]
   },
   {
@@ -106,7 +198,7 @@
     "| integer | whole numbers | -1, 3, 87|\n",
     "| float | decimal numbers | .02, 2.3, -12.344|\n",
     "| string | text | \"Hello world\", \"hi\", \"1782\"|\n",
-    "| list | collection of like things |[1, 3, 9], [\"ab\", \"cd\", ef\"]|\n",
+    "| list | collection of things |[1, 3, 9], [\"ab\", \"cd\", ef\"]|\n",
     "| tuple| list with no add/remove |(1, 3, 9), (\"ab\", \"cd\", \"ef\")|\n",
     "| dictionary | key, value store | {\"Bob\": '891-829-2781', \"Dot\":'289-289-1892'}|\n",
     "\n"
@@ -114,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -142,14 +234,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How many RSVPs? 21\n"
+     ]
+    }
+   ],
    "source": [
     "# let's try this again\n",
     "people = input(\"How many RSVPs? \")\n",
@@ -160,16 +259,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "About 21 👪 will show up\n"
+     ]
+    }
+   ],
    "source": [
     "# lets print pretty\n",
-    "print(f\"About {people} 👪 will show up\")"
+    "print(\"About {} 👪 will show up\".format(people))"
    ]
   },
   {
@@ -187,47 +294,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.5625\n"
+     ]
+    }
+   ],
    "source": [
     "# so now what? math!\n",
     "slices = people * 2.5\n",
-    "pies = slices / 8 "
+    "pies = slices / 8 \n",
+    "print(pies)\n",
+    "# +, -, /, *, %, //, ** "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "About 6.56 pizzas🍕\n"
+     ]
+    }
+   ],
    "source": [
-    "# lets print that pretty! (NOTE: Python 3.6 specific)\n",
-    "print(f\"About {pies:.2f} pizzas🍕\")"
+    "# lets print that pretty! \n",
+    "print(\"About {:.2f} pizzas🍕\".format(pies))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "About 7.00 pizzas🍕\n"
+     ]
+    }
+   ],
    "source": [
     "# 1.88? let's use math to get a nice round number:\n",
     "import math\n",
     "pies = math.ceil(pies) # ceiling rounds up\n",
-    "print(f\"About {pies:.2f} pizzas🍕\")"
+    "print(\"About {:.2f} pizzas🍕\".format(pies))"
    ]
   },
   {
@@ -243,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -305,61 +438,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cheese': 3, 'meat': 2, 'veggie': 2}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# can we store this information in some form? \n",
-    "total_pies = {\"cheese\": cheese, \"meat\": meat, \"veggie\":veggie}\n",
+    "total_pies = {\"cheese\": cheese, \n",
+    "              \"meat\": meat, \n",
+    "              \"veggie\":veggie}\n",
     "total_pies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# How do we access the information? \n",
-    "print(total_pies[\"meat\"])"
+    "total_pies[\"cheese\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cheese': 3, 'meat': 2, 'mushroom': 2, 'veggie': 2}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# add another topping?\n",
-    "total_pies[\"mushroom\"] = 2"
+    "total_pies[\"mushroom\"] = 2\n",
+    "total_pies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cheese': 3, 'meat': 2, 'veggie': 2, 'mushroom': 2}\n",
+      "cheese 3\n",
+      "meat 2\n",
+      "veggie 2\n",
+      "mushroom 2\n"
+     ]
+    }
+   ],
    "source": [
     "# access all, but one at a time? loops!\n",
+    "print(total_pies)\n",
     "for topping in total_pies:\n",
-    "    print(f\"{total_pies[topping]} {topping}\")"
+    "    print(topping, total_pies[topping])\n",
+    "    #print(f\"{total_pies[topping]} {topping}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['cheese', 'meat', 'veggie', 'mushroom'])\n",
+      "cheese\n",
+      "meat\n",
+      "veggie\n",
+      "mushroom\n"
+     ]
+    }
+   ],
+   "source": [
+    "toppings = total_pies.keys()\n",
+    "print(toppings)\n",
+    "for t in toppings:\n",
+    "    print(t)"
    ]
   },
   {
@@ -388,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -397,20 +607,35 @@
    },
    "outputs": [],
    "source": [
-    "cups = 2 * people\n",
-    "CUPS_PER_BOTTLE = 67 / 8  # 67 ounces in a 2-liter bottle     \n",
+    "cups = 5 * people\n",
+    "CUPS_PER_BOTTLE = 67 / 8  \n",
+    "# 67 ounces per 2 liter\n",
+    "# 8 ounces per cup \n",
+    "#(cups/liter)\n",
     "total_cups = cups/CUPS_PER_BOTTLE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cups_per_bottle' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-48-32ba144eccb4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcups_per_bottle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtotal_cups\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'cups_per_bottle' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(cups_per_bottle, total_cups)"
    ]
