--- a/2018/july16.ipynb
+++ b/2018/july16.ipynb
@@ -1019,6 +1019,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![mpl anatomy figure](mpl_anatomy.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
