--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Repository for all EAS2013/HIRES coursework
 
-![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/story645/EAS213/master)
+
+[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/story645/EAS213/master)
