--- a/2018/july17a.ipynb
+++ b/2018/july17a.ipynb
@@ -8,37 +8,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The landsat fils can be found at https://github.com/story645/EAS213/tree/master/data\n",
+    "\n",
+    "If you have the file on your computer, set the path to the location on disk:\n",
+    "\n",
+    "```python\n",
+    "rgbdatafile = \"/path/to/landsat_RGBN.txt\"\n",
+    "raddatafile = '/path/to/landsat_thermrad.txt'\n",
+    "```\n",
+    "if you are running the file via mybinder (the interactive version), then set the path to the managed version of the data:\n",
+    "\n",
+    "```python\n",
+    "from quilt.data.story645.eas213 import (landsat_RGBN, landsat_thermrad)\n",
+    "rgbdatafile = landsat_RGBN._data()\n",
+    "raddatafile = landsat_thermrad._data()\n",
+    "\n",
+    "```\n",
+    "\n",
+    "You can also install quilt and the data package on your computer to access the data. To do so, enter the following commands in a terminal or anaconda command prompt:\n",
+    "\n",
+    "```bash\n",
+    "pip install quilt\n",
+    "quilt install story645/eas213\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set rgbdatafile variable in this cell\n",
+    "rgbdatafile = "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# let's load in the RGBN file\n",
-    "import landsat_sample_functions as lf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#where your data lives on the compute\n",
-    "#rgbdatafile = \"../data/landsat_RGBN.txt\"\n",
-    "#rgbn = lf.landsat_read(rgbdatafile)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# quilt is an alternative way of accessing the data\n",
-    "# need to first install quilt: pip install quilt\n",
-    "# then install data: quilt install story645/eas213\n",
-    "from quilt.data.story645 import eas213 \n",
-    "rgbn = lf.landsat_read(eas213.landsat_RGBN._data())"
+    "import landsat_sample_functions as lf\n",
+    "rgbn = lf.landsat_read(rgbdatafile)"
    ]
   },
   {
@@ -268,9 +284,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#landsat_thermrad.txt\n",
-    "#raddatafile = '../data/landsat_thermrad.txt'\n",
-    "#thermrad = lf.landsat_read(raddatafile)"
+    "#set raddatafile variable in this cell\n",
+    "raddatafile = "
    ]
   },
   {
@@ -279,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thermrad = lf.landsat_read(eas213.landsat_thermrad._data())"
+    "thermrad = lf.landsat_read(raddatafile)"
    ]
   },
   {
@@ -298,8 +313,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#convert temperature to Celsius\n",
     "temps_c = temps - 273.15\n",
+    "# convert temperatures to Fahrenheit\n",
     "temps_f = (9/5)*temps_c + 32\n",
+    "#print min and max temps\n",
     "temps.min(), temps.max()"
    ]
   },
