--- a/2018/july16.ipynb
+++ b/2018/july16.ipynb
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![mpl anatomy figure](mpl_anatomy.png)"
+    "![mpl anatomy figure](figs/mpl_anatomy.png)"
    ]
   },
   {
