--- a/2018/july18a.ipynb
+++ b/2018/july18a.ipynb
@@ -130,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![boxplot](../data/boxplot.svg)\n",
+    "![boxplot](figs/boxplot.svg)\n",
     "By Jhguch at en.wikipedia, CC BY-SA 2.5, https://commons.wikimedia.org/w/index.php?curid=14524285"
    ]
   },
