--- a/2018/july19a.ipynb
+++ b/2018/july19a.ipynb
@@ -52,15 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import landsat_sample_functions as lf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import landsat_sample_functions as lf\n",
     "# pull out the thermal radiances from from ds and convert them to temperature\n",
     "tempK = lf.BT(ds['Thermal Radiances'], 10.9, 1)\n",
     "#convert the temperature to Fahrenheit\n",
